[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/LightStick.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LevelGenerator.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Deerboy - Cave is Full of Bugs and Loot.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Deerboy - Automatic Virtual Looting.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/Ui.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/hurt.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/death.wav" type="AudioStream" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
LightStick = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 506.335, 195.07 )

[node name="LevelGenerator" parent="." instance=ExtResource( 4 )]

[node name="Ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Rave" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0
pitch_scale = 0.01
autoplay = true

[node name="Ui" parent="." instance=ExtResource( 7 )]

[node name="timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="take_damage" from="Player" to="." method="_on_Player_take_damage"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
